--- a/scss/_equipo.scss
+++ b/scss/_equipo.scss
@@ -3,9 +3,9 @@
 #equipo {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    align-items: start;
+    justify-content: start;
+    text-align: start;
     margin-top: 30px;
   }
 
