--- a/scss/_button-style.scss
+++ b/scss/_button-style.scss
@@ -1,27 +1,35 @@
  /*botones*/
+ #botones {
+  display: flex;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
 
-#botones {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-    text-decoration: none;
-  }
+#botones a {
+  text-decoration: none;
+}
 
 .buttons {
-    display: block;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-    font-size: 10x;
-    text-decoration: none;
-  }
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  font-size: 10x;
+  gap: 10px;
+}
 
 .botonenviar {
+    display: grid;
+    grid-template-columns: 1fr;
     background-color: #444;
     color: #fff;
     border: none;
     border-radius: 5px;
+    text-align: center;
+
     
     &:hover {
       background-color: #0e79b2;
@@ -31,10 +39,13 @@
   }
   
   .botonborrar {
+    display: grid;
+    grid-template-columns: 1fr;
     background-color: #fff;
     color: #000;
     border: 1px solid #000;
     border-radius: 5px;
+
   
     &:hover {
       background-color: #0e79b2;
@@ -43,17 +54,22 @@
     }
   }
 
-  .botoncontacto button {
-    @extend .botonborrar;
-    padding: 5px 10px;
-    font-size: 10px;
-    margin-left: 10px;
+  .botoncontacto {
+    button {
+      @extend .botonborrar;
+      display: flex;
+      margin: 0;
+      padding: 5px 10px;
+    }
   }
-
-  .botongaleria button {
-    @extend .botonenviar;
-    padding: 5px 10px;
-    font-size: 10px;
+  
+  .botongaleria {
+    button {
+      @extend .botonenviar;
+      display: flex;
+      margin: 0;
+      padding: 5px 10px;
+    }
   }
 
   .botonenviar {
@@ -68,3 +84,4 @@
     padding: 10px 20px;
     cursor: pointer;
   }
+ 
