--- a/css/style.css
+++ b/css/style.css
@@ -889,3 +889,20 @@ p {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+.swal2-actions button {
+  margin-right: 10px;
+}
+
+button#irArribaBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #aaa;
+  color: #fff;
+  border: none;
+  border-radius: 50px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
